# auditclaw

./: .gitignore  README.md  README_CN.md  pyproject.toml
auditclaw/: __init__.py  agent.py  cli.py  config.json  cost.py  env.py  logger.py
auditclaw/backends/: __init__.py  base.py  claude_sdk.py  codex.py  factory.py
auditclaw/events/: __init__.py  models.py  publisher.py
auditclaw/runner/: __init__.py  api.py  auditor_loader.py  executor.py  http_server.py  orchestrator.py  runtime_profile.py  stdio_server.py  task_validator.py  template_renderer.py  workspace_init.py
auditors/example-minimal-audit/: audit.md  auditor.json  decompose.md
auditors/example-sol-audit/: audit.md  auditor.json  decompose.md  report.md
auditors/example-sol-audit/knowledge/: vuln_checklist.md
bankroll/: proxy_wbnb.sol  stack_wbnb.sol
bankroll/audit-materials/: request.md
bankroll/audit-materials/audit/task-01-token-accounting/: memory.md  summary.md
bankroll/audit-materials/audit/task-05-access-and-validations/: memory.md  summary.md
bankroll/audit-materials/audit/task_01/: memory.md  summary.md
bankroll/audit-materials/audit/task_02/: memory.md  summary.md
bankroll/audit-materials/audit/task_02/findings/: 01-buyprice-incorrect.md  (+2 more)
bankroll/audit-materials/audit/task_03/: memory.md  summary.md
bankroll/audit-materials/audit/task_04/: memory.md  summary.md
bankroll/audit-materials/audit/task_05/: memory.md  summary.md
bankroll/audit-materials/audit/task_06/: memory.md  summary.md
bankroll/audit-materials/report/: final_report.md
tests/: test_v2_runner.py
(+24 files in other folders)
